--- a/dev/ember-project/app/components/tournament-list.hbs
+++ b/dev/ember-project/app/components/tournament-list.hbs
@@ -1,6 +1,6 @@
 <nav class="navigation-bar">
     <h1 class="white">Tournaments</h1>
-    <button class="tournament-button update" onclick={{this.onJoinClick}} type="button">↻</button>
+    <button class="tournament-button update" onclick={{this.fetchTournaments}} type="button">↻</button>
 </nav>
 <div class="scrollable-list middle-scroll">
     {{#each this.tournaments as |tournament|}}
