--- a/dev/ember-project/app/templates/chat.hbs
+++ b/dev/ember-project/app/templates/chat.hbs
@@ -1,4 +1,1 @@
-<Chat   @messages={{this.messages}} 
-        @messageInput={{this.messageInput}}
-        @updateInputValue={{this.updateInputValue}}
-        @sendMessage={{this.sendMessage}} />
+<Chat/>
