--- a/dev/ember-project/app/templates/tournament.hbs
+++ b/dev/ember-project/app/templates/tournament.hbs
@@ -1,10 +1,10 @@
 <div class="container-fluid row">
 	<div class="col-7">
-	  <h2 class="points center">👥 {{this.model.current_players}}/{{this.model.max_players}}</h2>
-   	  <UserList />  
+	  <h2 class="points center">👥 1/10</h2>
+   	  
 	</div>
 	<div class="button-container col-5">
-	  <button class="nav-button start" type="button">Start Tournament</button>
+	  <button class="nav-button start" type="button" >Start Tournament</button>
       <button class="nav-button cancel" type="button">Cancel Tournament</button> 
 	</div>
 </div>
