--- a/dev/ember-project/app/components/message.hbs
+++ b/dev/ember-project/app/components/message.hbs
@@ -2,6 +2,28 @@
   <div class="message-item message-tournament">[{{@message.from}}] {{@message.content}}</div>
 {{else if (eq @message.type "whisper")}}
   <div class="message-item message-whisper">[{{@message.from}}] {{@message.content}}</div>
+{{else if (eq @message.type "add")}}
+  {{#if (eq @message.from @ownNickname)}}
+    <div class="alert alert-success p-2 mt-1 mb-1" role="alert">
+      You sent a friend request to {{@message.to}}.
+    </div>
+  {{else}}
+    <div class="alert alert-success p-2 mt-1 mb-1" role="alert">
+      {{@message.from}} wants to add you as a friend 
+      <a href="#" class="alert-link" {{on "click" this.acceptFriend}}>ACCEPT</a>
+    </div>
+  {{/if}}
+{{else if (eq @message.type "invite")}}
+  {{#if (eq @message.from @ownNickname)}}
+    <div class="alert alert-danger p-2 mt-1 mb-1" role="alert">
+      You invited {{@message.to}} to a game.
+    </div>
+  {{else}}
+    <div class="alert alert-danger p-2 mt-1 mb-1" role="alert">
+      {{@message.from}} invited you to a game
+      <a href="#" class="alert-link" {{on "click" (fn this.joinGame @message.from)}}>PLAY</a>
+    </div>
+  {{/if}}
 {{else}}
   <div class="message-item message-default">[{{@message.from}}] {{@message.content}}</div>
 {{/if}}
