--- a/dev/ember-project/app/components/profile-other.hbs
+++ b/dev/ember-project/app/components/profile-other.hbs
@@ -28,7 +28,7 @@
           🚫
         </button>
       </div>
-      <h2 class="points">{{@selectedUser.points}}🏆</h2>
+      <h2 class="points">{{@selectedUser.trophies}}🏆</h2>
     </div>
 
     {{!-- Second row of profile details --}}
