--- a/dev/ember-project/app/components/profile-own.hbs
+++ b/dev/ember-project/app/components/profile-own.hbs
@@ -17,7 +17,7 @@
         {{/if}}
         <button class="logout-button" type="button" {{on "click" this.logout}}>Logout</button>
       {{/if}}
-      <h2 class="points info">{{this.user.profile.points}} 🏆</h2>
+      <h2 class="points info">{{this.user.profile.trophies}} 🏆</h2>
     </div>
 
     <!-- Second row of profile details -->
