--- a/dev/ember-project/app/components/user.hbs
+++ b/dev/ember-project/app/components/user.hbs
@@ -6,6 +6,6 @@
         {{else}}
         <h2 class="info">{{@user.nickname}} 🔴</h2>
         {{/if}}
-        <h2 class="points info">{{@user.points}} 🏆</h2>        
+        <h2 class="points info">{{@user.trophies}} 🏆</h2>        
     </div>
 </div>
