--- a/dev/ember-project/app/templates/tournament.hbs
+++ b/dev/ember-project/app/templates/tournament.hbs
@@ -5,7 +5,7 @@
 			<UserListTournament/>
 		</div>
 		<div class="button-container col-5">
-		<button class="nav-button start" type="button" >Start Tournament</button>
+		<button class="nav-button start" type="button" {{on "click" (fn this.tournament.startTournament)}}>Start Tournament</button>
 		<button class="nav-button cancel" type="button" {{on "click" (fn this.tournament.disconnectFromLobby this.user.profile.nickname)}}>Leave</button> 
 		</div>
 	{{else}}
