backend lobby logic improvements

--- a/backend/lobby/lobby/templates/lobby/index.html
+++ b/backend/lobby/lobby/templates/lobby/index.html
@@ -95,7 +95,7 @@
 				const data = {
 					action: 'create_or_join',
 					tournament_name: tournamentName,
-					username: username
+					nickname: username
 				};
 				socket.send(JSON.stringify(data));
 			};
