--- a/dev/ember-project/app/components/profile-own.hbs
+++ b/dev/ember-project/app/components/profile-own.hbs
@@ -22,7 +22,7 @@
 
     <!-- Second row of profile details -->
     <div class="profile-details">
-      <h2 class="info">Games: {{this.user.profile.games_total}}</h2>
+      <ModalGameHistory />
       <h2 class="info">Wins: {{this.user.profile.wins}}</h2>
     </div>
 
