--- a/dev/ember-project/app/components/profile-other.hbs
+++ b/dev/ember-project/app/components/profile-other.hbs
@@ -33,7 +33,7 @@
 
     {{!-- Second row of profile details --}}
     <div class="profile-details">
-      <h2 class="info">Games: {{@selectedUser.games_total}}</h2>
+      <ModalGameHistory />
       <h2 class="info">Wins: {{@selectedUser.wins}}</h2>
     </div>
 
