--- a/dev/ember-project/app/components/scoreboard.hbs
+++ b/dev/ember-project/app/components/scoreboard.hbs
@@ -1,30 +1,16 @@
 <div class="container-fluid row border">
   {{!-- Profile picture column (1 part) --}}
   <div class="col-5">
-    <User @user={{this.player_1}} @selectUser={{this.args.selectUser}}/>
+    
+    <User @user={{this.gameData.player_1}} @selectUser={{this.args.selectUser}}/>
   </div>
 
   {{!-- Profile details column (3 parts) --}}
   <div class="col-2">
-    <div class="waviy center"><span style="--i:1">3:1</span></div>
+    <div class="waviy center"><span style="--i:1">{{this.gameData.left_score}}:{{this.gameData.right_score}}</span></div>
   </div>
 
   <div class="col-5">
-    <User @user={{this.player_2}} @selectUser={{this.args.selectUser}}/>
-  </div>
-</div>
-<div class="container-fluid row border">
-  {{!-- Profile picture column (1 part) --}}
-  <div class="col-5">
-    <User @user={{this.player_2}} @selectUser={{this.args.selectUser}}/>
-  </div>
-
-  {{!-- Profile details column (3 parts) --}}
-  <div class="col-2">
-    <h1 class="white center">Next Match</h1>
-  </div>
-
-  <div class="col-5">
-    <User @user={{this.player_2}} @selectUser={{this.args.selectUser}}/>
+    <User @user={{this.gameData.player_2}} @selectUser={{this.args.selectUser}}/>
   </div>
 </div>
