--- a/dev/ember-project/app/templates/tournament.hbs
+++ b/dev/ember-project/app/templates/tournament.hbs
@@ -5,7 +5,9 @@
 			<UserListTournament/>
 		</div>
 		<div class="button-container col-5">
-		<button class="nav-button start" type="button" {{on "click" (fn this.tournament.startTournament)}}>Start Tournament</button>
+			{{#if (eq this.tournament.admin this.user.profile.nickname)}}
+				<button class="nav-button start" type="button" {{on "click" (fn this.tournament.startTournament)}}>Start Tournament</button>
+			{{/if}}
 		<button class="nav-button cancel" type="button" {{on "click" (fn this.tournament.disconnectFromLobby this.tournament.currentLobby)}}>Leave</button> 
 		</div>
 	{{else}}
