added countdown and implemented first history iteration

--- a/dev/ember-project/app/components/modal-game-history.hbs
+++ b/dev/ember-project/app/components/modal-game-history.hbs
@@ -12,4 +12,22 @@
     </h4>
   </modal.header>
 
+  <modal.body>
+    <div class="container-fluid row" style="height: 50vh; overflow-y: auto; margin: 0; padding: 0;">
+        <div class="scrollable-list history-scroll">
+    
+          <HistoryItem />
+          <HistoryItem />
+          <HistoryItem />
+          <HistoryItem />
+          <HistoryItem />
+          <HistoryItem />
+          <HistoryItem />
+
+        </div>
+    </div>
+    
+    
+  </modal.body>
+
 </BsModal>
