--- a/dev/ember-project/app/components/profile-other.hbs
+++ b/dev/ember-project/app/components/profile-other.hbs
@@ -24,7 +24,7 @@
           ➕
         </button>
         <button class="emoji-button info" data-bs-toggle="tooltip" data-bs-placement="top" title="Block User"
-          type="button" {{on "click" (fn this.blockUser "block")}}>
+          type="button" {{on "click" (fn this.blockUser "add")}}>
           🚫
         </button>
       </div>
