--- a/dev/ember-project/app/components/scoreboard.hbs
+++ b/dev/ember-project/app/components/scoreboard.hbs
@@ -7,7 +7,7 @@
 
   {{!-- Profile details column (3 parts) --}}
   <div class="col-2">
-    <div class="waviy center"><span style="--i:1">{{this.gameData.left_score}}:{{this.gameData.right_score}}</span></div>
+    <div class="score center">{{this.gameData.left_score}}:{{this.gameData.right_score}}</div>
   </div>
 
   <div class="col-5">
