--- a/dev/ember-project/app/components/pong-game.hbs
+++ b/dev/ember-project/app/components/pong-game.hbs
@@ -2,8 +2,12 @@
   {{#if this.winner}}
     <h1 class="white">Winner: {{this.winner}}</h1>
   {{else}}
+    {{#if (not (eq this.status 0))}}
+      <h1 class="white">{{this.status}}</h1>
+    {{else}}
+      <Ball @positionX={{this.ballPositionX}} @positionY={{this.ballPositionY}} />
+    {{/if}}
     <Paddle @position={{this.leftPaddlePosition}} @side="paddle-left" />
-    <Ball @positionX={{this.ballPositionX}} @positionY={{this.ballPositionY}} />
     <Paddle @position={{this.rightPaddlePosition}} @side="paddle-right" />
   {{/if}}
 </div>
