--- a/dev/ember-project/app/components/modal-profile.hbs
+++ b/dev/ember-project/app/components/modal-profile.hbs
@@ -1,37 +1,42 @@
 <button class="btn btn-primary" type="button" {{on "click" this.openModal}}>
-          Edit Profile
+  Edit Profile
 </button>
 
 <BsModal
   @open={{this.isModalOpen}}
   as |modal|
 >
-  <modal.header>
+  <modal.header style="background-color: #706363;">
     <h4 class="modal-title">
       Edit Profile
     </h4>
   </modal.header>
-  <modal.body>
-    
-      <div class="form-group">
-        <label>Choose Avatar:</label>
-        <input type="file" class="form-control" placeholder="Choose Avatar">
-        <small>This is the visible Avatar on this Site</small>
-      </div>
+  <modal.body style="background-color: #706363;">
+    <div class="form-group" >
+      <label>Choose Avatar:</label>
+      <input 
+        type="file" 
+        class="form-control"
+        style="background-color: #706363;"
+        placeholder="Choose Avatar" 
+        {{on "change" this.updateAvatar}}
+      >
+      <small>This is the visible Avatar on this Site</small>
+    </div>
 
-      <div class="form-group mt-3">
-        <label>Nickname:</label>
-        <input 
-          type="name" 
-          class="form-control" 
-          value={{this.newNickname}}
-          {{on "input" this.updateNewNickname}}
-        >
-        <small>This is the visible Name on this Site</small>
-      </div>
-    
+    <div class="form-group mt-3" >
+      <label>Nickname:</label>
+      <input 
+        type="name" 
+        class="form-control"
+        style="background-color: #706363;"
+        value={{this.newNickname}}
+        {{on "input" this.updateNewNickname}}
+      >
+      <small>This is the visible Name on this Site</small>
+    </div>
   </modal.body>
-  <modal.footer>
+  <modal.footer style="background-color: #706363;">
     <BsButton @onClick={{modal.close}}>Cancel</BsButton>
     <BsButton @type="success" @onClick={{this.submit}}>Save</BsButton>
   </modal.footer>
