--- a/dev/ember-project/app/components/navigation-bar.hbs
+++ b/dev/ember-project/app/components/navigation-bar.hbs
@@ -1,5 +1,4 @@
 <nav class="navigation-bar">
-    <button class="nav-button" type="button">Friends</button>
-    <button class="nav-button" type="button">All</button>
-    <button class="nav-button" type="button">Last</button>
+    <button class="nav-button" type="button" {{on "click" (fn this.onLeaveClick @creator)}}>Friends</button>
+    <button class="nav-button" type="button" {{on "click" (fn this.onLeaveClick @creator)}}>All</button>
 </nav>
