--- a/dev/ember-project/app/components/scoreboard.hbs
+++ b/dev/ember-project/app/components/scoreboard.hbs
@@ -6,9 +6,11 @@
   </div>
 
   {{!-- Profile details column (3 parts) --}}
+  {{#if this.gameData.player_1}}
   <div class="col-2">
     <div class="score center">{{this.gameData.left_score}}:{{this.gameData.right_score}}</div>
   </div>
+  {{/if}}
 
   <div class="col-5">
     <User @user={{this.gameData.player_2}} @selectUser={{this.args.selectUser}}/>
