--- a/dev/ember-project/app/components/user-list.hbs
+++ b/dev/ember-project/app/components/user-list.hbs
@@ -1,5 +1,9 @@
+<nav class="navigation-bar">
+    <button class="nav-button" type="button" {{on "click" (fn this.setFilter "friends")}}>Friends</button>
+    <button class="nav-button" type="button" {{on "click" (fn this.setFilter "all")}}>All</button>
+</nav>
 <div class="scrollable-list middle-scroll">
-    {{#each this.users as |user|}}
+    {{#each this.filteredUsers as |user|}}
         <User @user={{user}} @selectUser={{this.args.selectUser}} />
     {{/each}}
 </div>
