--- a/dev/ember-project/app/components/user.hbs
+++ b/dev/ember-project/app/components/user.hbs
@@ -1,11 +1,13 @@
-<div class="user-card" role="button" onclick={{this.select}}>
-    <img src={{@user.avatar}} alt="Profile Picture" class="user-pic user" />
-    <div class="profile-details">
-        {{#if this.isOnline}} 
-        <h2 class="info">{{@user.nickname}} 🟢</h2>
-        {{else}}
-        <h2 class="info">{{@user.nickname}} 🔴</h2>
-        {{/if}}
-        <h2 class="points info">{{@user.trophies}} 🏆</h2>        
+{{#if @user}} 
+    <div class="user-card" role="button" onclick={{this.select}}>
+        <img src="https://localhost/users/users{{@user.avatar}}/" alt="Profile Picture" class="user-pic user" />
+        <div class="profile-details">
+            {{#if this.isOnline}} 
+            <h2 class="info">{{@user.nickname}} 🟢</h2>
+            {{else}}
+            <h2 class="info">{{@user.nickname}} 🔴</h2>
+            {{/if}}
+            <h2 class="points info">{{@user.trophies}} 🏆</h2>        
+        </div>
     </div>
-</div>
+{{/if}}
