--- a/dev/ember-project/app/templates/tournament.hbs
+++ b/dev/ember-project/app/templates/tournament.hbs
@@ -1,13 +1,16 @@
 <div class="container-fluid row">
 	{{#if this.tournament.currentLobby}}
 		<div class="col-7">
-			<h2 class="points center">👥 1/10</h2>
+			<h2 class="points center">👥 {{this.tournament.currentPlayers.length}}/10</h2>
 			<UserListTournament/>
 		</div>
 		<div class="button-container col-5">
-			{{#if (eq this.tournament.admin this.user.profile.nickname)}}
-				<button class="nav-button start" type="button" {{on "click" (fn this.tournament.startTournament)}}>Start Tournament</button>
+			{{#if (and (eq this.tournament.admin this.user.profile.nickname) this.tournament.playerInTournament)}}
+  				<button class="nav-button start" type="button" {{on "click" (fn this.tournament.startTournament)}}>
+    				Start Tournament
+  				</button>
 			{{/if}}
+
 		<button class="nav-button cancel" type="button" {{on "click" (fn this.tournament.disconnectFromLobby this.tournament.currentLobby)}}>Leave</button> 
 		</div>
 	{{else}}
