updated remove functionality and error text for nickname change

--- a/dev/ember-project/app/components/modal-game-history.hbs
+++ b/dev/ember-project/app/components/modal-game-history.hbs
@@ -1,5 +1,5 @@
 <button class="btn btn-success p-1 mb-1" type="button" {{on "click" this.openModal}}>
-          Games: {{this.user.profile.games_total}}
+          Games: {{@user.games_total}}
 </button>
 
 <BsModal
